@@ -21,7 +21,8 @@
 		<next-action name="respond" id="__service_response__"
 			isfolder="false" />
 		<redirect-action name="play_it" id="snap_and_play_video" />
-		<redirect-action name="play_direct" id="play_raw_video" />
+		<redirect-action name="play_direct_video" id="play_raw_video" />
+		<redirect-action name="play_direct_audio" id="play_raw_audio" />
 	</action>
 	
 	<action id="play_hosted_audio">
